Stop codeblocks from overflowing

--- a/assets/css/typography.scss
+++ b/assets/css/typography.scss
@@ -5,6 +5,9 @@
 body {
   font-family: 'Raleway', sans-serif;
   color: rgba(0,0,0,.8);
+
+  word-break: break-word;
+  word-wrap: break-word;
 }
 
 /*=== BASIC TYPO ===*/
@@ -49,7 +52,9 @@ pre {
   background-color: rgba(0,0,0,.05);
   padding: 12px 16px;
   margin: 0 2px;
-  
+
+  white-space: pre-wrap;
+  overflow: auto;
 }
 
 code {
